// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expenses totalling 
    $2.22
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with several expenses 1`] = `
<div>
  <h1>
    Viewing 
    22
     expenses totalling 
    $4,545,454.54
  </h1>
</div>
`;
